# ShelfAI

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: analyzer.md  detector.md  providers.md
src/PlantAI/: __init__.py  analyzer.py  detector.py  main.py  utilis.py
src/PlantAI/providers/: __init__.py  gemini_provider.py
src/ShelfAI/: __init__.py  main.py
src/ShelfAI/providers/: claude_provider.py  openai_provider.py
