[project]
name = "plantai"
version = "0.1.0"
description = "Meu pacote PlantAI"
readme = "README.md"
authors = [
    { name = "Patrick Almeida", email = "patrickbalmeida@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.6",
]

[project.scripts]
plantai = "plantai:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
