[project]
name = "plantai"
version = "0.1.0"
description = "Meu pacote PlantAI"
readme = "README.md"
authors = [
    { name = "Patrick Almeida", email = "patrickbalmeida@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.53.0",
    "google-generativeai>=0.8.5",
    "numpy>=2.2.6",
    "openai>=1.86.0",
    "opencv-python>=4.11.0.86",
    "python-dotenv>=1.1.0",
    "torch>=2.7.1",
    "ultralytics>=8.3.153",
]

[project.scripts]
shelfai = "PlantAI.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
